warehouse20/nzbget/statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: nzbget
  namespace: warehouse20
  labels:
    app: nzbget
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: http
      targetPort: http
      port: 6789
      protocol: TCP
  selector:
    app: nzbget

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    flux.weave.works/tag.fluxcloud: glob:v*
    flux.weave.works/automated: 'true'
  labels:
    app: nzbget
  name: nzbget
  namespace: warehouse20
spec:
  serviceName: nzbget
  selector:
    matchLabels:
      app: nzbget
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nzbget
    spec:
      automountServiceAccountToken: false
      containers:
      - name: nzbget
        image: quay.io/nicolerenee/nzbget:v20.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 6789
          name: http
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: http
        readinessProbe:
          httpGet:
            path: /
            port: http
        resources:
          limits:
            cpu: "2"
            memory: 2Gi
        securityContext:
          runAsUser: 1024
          runAsGroup: 100
        volumeMounts:
        - mountPath: /config
          name: config
          subPath: data
        - mountPath: /mnt/media01/downloads/nzbget
          name: media
          subPath: downloads/nzbget
      volumes:
      - name: config
        iscsi:
          iqn: iqn.2019-03.com.ntwk20:vault01.nzbget.cdab998267
          targetPortal: 172.20.1.5
          lun: 1
          chapAuthSession: true
          secretRef:
            name: vault01-chap-secret
      - name: media
        persistentVolumeClaim:
          claimName: media
