warehouse20/nzbget/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-tls-secret: ingress-nginx/cf-origin
    nginx.ingress.kubernetes.io/auth-url: "http://organizr.warehouse20.svc.cluster.local/api/?v1/auth&group=1"
    nginx.ingress.kubernetes.io/auth-signin: "https://warehouse20.com/?error=401"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Accept-Encoding "";
      sub_filter
      '</head>'
      '<link rel="stylesheet" type="text/css" href="https://gilbn.github.io/theme.park/CSS/themes/nzborg.css">
      </head>';
      sub_filter_once on;
  labels:
    app: nzbget
  name: nzbget
  namespace: warehouse20
spec:
  rules:
  - host: nzbget.warehouse20.com
    http:
      paths:
      - backend:
          serviceName: nzbget
          servicePort: http
        path: /
  tls:
  - hosts:
    - "*.warehouse20.com"
    secretName: cf-w20
